# vareille-tinyfiledialogs

./: CMakeLists.txt  readme.adoc
.devcontainer/: Dockerfile  devcontainer.json
dll_cs_lua_R_fortran_pascal/: tinyfiledialogs_dylib.sh  tinyfiledialogs_so.sh
more_dialogs/: CMakeLists.txt
